all bugs solved locally